Made image count visible and show only numbers to avoid i18n.

--- a/ftw/colorbox/browser/resources/colorbox.css
+++ b/ftw/colorbox/browser/resources/colorbox.css
@@ -25,14 +25,14 @@
         #cboxLoadedContent{background:#000; padding:1px;}
         #cboxLoadingGraphic{background:url(++resource++ftw.colorbox.resources/loading.gif) no-repeat center center;}
         #cboxLoadingOverlay{background:#000;}
-        #cboxTitle{position:absolute; top:-22px; left:0; color:#000;}
-        #cboxCurrent{position:absolute; top:-22px; right:205px; text-indent:-9999px;}
+        #cboxTitle{position:absolute; top:-19px; left:0; color:#000;}
+        #cboxCurrent{position:absolute; top:-19px; right:80px;}
         #cboxSlideshow, #cboxPrevious, #cboxNext, #cboxClose{text-indent:-9999px; width:20px; height:20px; position:absolute; top:-20px; background:url(++resource++ftw.colorbox.resources/controls.png) no-repeat 0 0;}
-        #cboxPrevious{background-position:0px 0px; right:44px;}
+        #cboxPrevious{background-position:0px 0px; top:-22px; right:44px;}
         #cboxPrevious.hover{background-position:0px -25px;}
-        #cboxNext{background-position:-25px 0px; right:22px;}
+        #cboxNext{background-position:-25px 0px; top:-22px; right:22px;}
         #cboxNext.hover{background-position:-25px -25px;}
-        #cboxClose{background-position:-50px 0px; right:0;}
+        #cboxClose{background-position:-50px 0px; top:-22px; right:0;}
         #cboxClose.hover{background-position:-50px -25px;}
         .cboxSlideshow_on #cboxPrevious, .cboxSlideshow_off #cboxPrevious{right:66px;}
         .cboxSlideshow_on #cboxSlideshow{background-position:-75px -25px; right:44px;}
